# orp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  README.md  REQUIREMENTS.md  audit.toml  docker-compose.yml  openapi.yaml
.factory/: FIX_UNWRAPS.md  HARNESS.md  SPRINT_PLAN.md  post-droid-task.md  task.md
.github/workflows/: ci.yml  release.yml
benches/: baseline.md
crates/orp-audit/: Cargo.toml
crates/orp-audit/src/: at_rest.rs  crypto.rs  entry.rs  lib.rs  logger.rs  persistent.rs  traits.rs
crates/orp-audit/tests/: cli_smoke.rs
crates/orp-config/: Cargo.toml
crates/orp-config/src/: error.rs  lib.rs  schema.rs  templates.rs  validation.rs
crates/orp-config/templates/: maritime.yaml
crates/orp-connector/: Cargo.toml
crates/orp-connector/benches/: parsers.rs
crates/orp-connector/src/: lib.rs  traits.rs
crates/orp-connector/src/adapters/: acars.rs  adsb.rs  ais.rs  aisstream.rs  asterix.rs  bacnet.rs  canbus.rs  cap.rs  ccsds.rs  cef.rs  cot.rs  csv_watcher.rs  database.rs  dnp3.rs  generic_api.rs  geojson.rs  grib.rs  gtfs.rs  hl7.rs  http_poller.rs  kafka.rs  klv.rs  klv_ts.rs  lorawan.rs  mavlink.rs  metar.rs  mod.rs  modbus.rs  mqtt.rs  nats.rs  netflow.rs  nffi.rs  nmea.rs  nmea2000.rs  opcua.rs  pcap.rs  sparkplugb.rs  stix.rs  syslog.rs  websocket_client.rs  (+1 more)
crates/orp-core/: Cargo.toml  frontend.html
crates/orp-core/src/: error.rs  main.rs  retry.rs
crates/orp-core/src/cli/: args.rs  commands.rs  doctor.rs  mod.rs
crates/orp-core/src/server/: federation.rs  federation_tls.rs  handlers.rs  hooks.rs  http.rs  ingest.rs  layers.rs  media.rs  media_servers.rs  mod.rs  notifications.rs  rtsp.rs  users.rs  websocket.rs
crates/orp-entity/: Cargo.toml
crates/orp-entity/src/: lib.rs  resolver.rs
crates/orp-geospatial/: Cargo.toml
crates/orp-geospatial/src/: lib.rs
crates/orp-ml/: Cargo.toml
crates/orp-ml/benches/: scorer.rs
crates/orp-ml/src/: features.rs  lib.rs
crates/orp-proto/: Cargo.toml  build.rs
crates/orp-proto/proto/: event.proto
crates/orp-proto/src/: lib.rs
crates/orp-query/: Cargo.toml
crates/orp-query/benches/: qparse.rs
crates/orp-query/src/: ast.rs  executor.rs  lib.rs  parser.rs
crates/orp-security/: Cargo.toml
crates/orp-security/src/: abac.rs  api_keys.rs  classification.rs  jwt.rs  keystore.rs  lib.rs  middleware.rs  oidc.rs  rbac.rs  url_safety.rs
crates/orp-storage/: Cargo.toml
crates/orp-storage/benches/: duckdb_queries.rs  duckdb_writes.rs
crates/orp-storage/src/: duckdb_engine.rs  graph_engine.rs  lib.rs  traits.rs
crates/orp-stream/: Cargo.toml
crates/orp-stream/benches/: dlq.rs  processor.rs
crates/orp-stream/src/: analytics.rs  dedup.rs  dlq.rs  lib.rs  monitor.rs  processor.rs  sanctions.rs  threat.rs
crates/orp-tak/: Cargo.toml
crates/orp-tak/src/: lib.rs  wire.rs
crates/orp-testbed/: Cargo.toml
crates/orp-testbed/benches/: query_latency.rs  stream_throughput.rs
crates/orp-testbed/src/: lib.rs
docs/: API_REFERENCE.md  AUDIT_HISTORY.md  BENCHES.md  CLI_REFERENCE.md  CONFIG.md  CONNECTOR_GUIDE.md  FEDERATION_TLS.md  GETTING_STARTED.md  HANDOFF_2026_05_01_MEDIA_RELAY.md  INTEGRATION_GUIDE.md  MEDIA.md  OIDC.md  ORP_QL_GUIDE.md  QUICKSTART.md  RECIPES.md  SECURITY.md  TLS.md
docs/upgrades/: v0.3.0.md
examples/: README.md
examples/adapter-config/: README.md  config.yaml
examples/quickstart-ais/: README.md  run.sh  vessels.json
examples/quickstart-ais/queries/: q1-count-by-type.orpql  q2-fast-vessels.orpql  q3-near-rotterdam.orpql
examples/saved-queries/: README.md  monitors.yaml  run.sh
examples/saved-queries/queries/: q1-fast-vessels.orpql  q2-low-altitude-aircraft.orpql  q3-sensors-by-status.orpql
examples/two-node-federation/: README.md  docker-compose.yml  run.sh
examples/two-node-federation/configs/: alpha.yaml  beta.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  test-setup.ts
frontend/src/components/: AlertFeed.tsx  Dashboard.tsx  EntityCard.tsx  EntityInspector.tsx  LoginPage.tsx  MapControls.tsx  MapLegend.tsx  MapView.tsx  QueryBar.tsx  QueryConsole.tsx  SearchPanel.tsx  Sidebar.tsx  TimelineScrubber.tsx  mapData.ts
frontend/src/components/__tests__/: AlertFeed.test.tsx  EntityInspector.test.tsx  QueryBar.test.tsx
frontend/src/hooks/: useAuth.ts  useEntities.ts  useEntityTypes.ts  useWebSocket.ts
frontend/src/hooks/__tests__/: useEntities.test.ts  useWebSocket.test.ts
frontend/src/store/: useAppStore.ts
frontend/src/store/__tests__/: useAppStore.test.ts
frontend/src/types/: index.ts
scripts/: aisstream-bridge.py  cross-compile.sh  install.sh  release.sh
sdk/js/: README.md  package.json  tsconfig.esm.json  tsconfig.json
sdk/js/src/: index.ts  types.ts
sdk/python/: README.md  setup.py
sdk/python/orp/: __init__.py  types.py
specs/: BUILD_API_FRONTEND.md  BUILD_CORE_ENGINE.md  BUILD_TEAMS_SPRINTS.md  COMPETITIVE_INTEL.md  EDGE_VISION.md  NMEA_RESEARCH.md  PARSER_AUDIT.md  PARSER_AUDIT_V2.md  PROTOCOL_UNIVERSE.md  Powerful.md  SPEC_COMPLIANCE_AUDIT.md  UNWRAP_AUDIT.md
