[workspace]
resolver = "2"
members = [
    "crates/orp-core",
    "crates/orp-storage",
    "crates/orp-stream",
    "crates/orp-connector",
    "crates/orp-query",
    "crates/orp-entity",
    "crates/orp-config",
    "crates/orp-audit",
    "crates/orp-proto",
    "crates/orp-geospatial",
    "crates/orp-security",
    "crates/orp-tak",
    "crates/orp-testbed",
    "crates/orp-ml",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }
clap = { version = "4", features = ["derive", "env"] }
nom = "7.1"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "pem"] }
rand = "0.8"
rustls-pemfile = "2.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
# Bench harness — kept here so each crate can pull it as a dev-dep without
# duplicating version pins. Criterion is dev-only; it never lands in the
# release binary.
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
# bincode 2 (NOT 3 — 3.0.0 is the doxx-incident xkcd-stub). Used for
# RocksDB-persisted bytes in orp-stream's DLQ + FederationOutbox and for
# the IsolationForest model in orp-ml. RUSTSEC-2025-0141 flags ALL bincode
# versions unmaintained; we suppress it via audit.toml with an exit ramp
# (postcard / bitcode / rkyv evaluation queued for v0.4).
bincode = { version = "2", features = ["serde"] }
# AES-256-GCM (AEAD) for at-rest envelope encryption of sensitive columns
# (audit log `details`, federation outbox payloads, DLQ rows). RustCrypto-
# pure, no system libcrypt link, FIPS-evaluatable when paired with
# AES-NI / ARMv8 Crypto Extensions.
aes-gcm = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
