[package]
name = "orp-audit"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hex = "0.4"
duckdb = { version = "1.2", features = ["bundled"] }
tokio = { workspace = true }
# At-rest envelope encryption (audit-log details column). Closes P-audit F7
# for the most sensitive column without requiring DuckDB encryption-
# extension support.
aes-gcm = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
