[package]
name = "orp-connector"
version.workspace = true
edition.workspace = true

[dependencies]
orp-proto = { path = "../orp-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
# NMEA connector: serial port access (Linux/macOS /dev/ttyUSB*)
# The serial feature falls back to raw file IO on platforms without tokio-serial.
# Uncomment to enable proper baud-rate control via tokio-serial:
# tokio-serial = { version = "5", optional = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
csv = "1.3"
# MAVLink — drone telemetry protocol (PX4, ArduPilot, Skydio, Auterion, ModalAI).
# v0.13 keeps us on a rust-version that matches the workspace's pinned MSRV (1.75).
mavlink = { version = "0.13", default-features = false, features = ["std", "udp", "common"] }
# Kafka — uses the `tokio` feature only. Avoid `cmake-build` and
# `ssl-vendored`: those force cmake / openssl-dev at build time, breaking
# `cargo check` on machines without them. The plain `tokio` feature gives
# async streams over the librdkafka system lib (or the bundled C source via
# `cc`); ORP's docs already require system openssl at runtime. Behind the
# `kafka` cargo feature so default `cargo check` skips the C compile.
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio"] }
# CCSDS / TLE / SGP4 — passive satellite tracking adapter. Default-on.
sgp4 = "2.0"
base64 = "0.22"
# NATS / JetStream — durable subject-based pub/sub. Behind the `nats`
# cargo feature.
async-nats = { version = "0.35", optional = true }
sha2 = { workspace = true }

[features]
default = ["nats"]
# Kafka adapter — pulls librdkafka via cmake-build.
kafka = ["dep:rdkafka"]
# NATS adapter — pulls async-nats client.
nats = ["dep:async-nats"]
# Enable all optional adapters.
all-adapters = ["kafka", "nats"]
