[package]
name = "orp-connector"
version.workspace = true
edition.workspace = true

[dependencies]
orp-proto = { path = "../orp-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
# NMEA connector: serial port access (Linux/macOS /dev/ttyUSB*)
# The serial feature falls back to raw file IO on platforms without tokio-serial.
# Uncomment to enable proper baud-rate control via tokio-serial:
# tokio-serial = { version = "5", optional = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
csv = "1.3"
# MAVLink — drone telemetry protocol (PX4, ArduPilot, Skydio, Auterion, ModalAI).
# v0.13 keeps us on a rust-version that matches the workspace's pinned MSRV (1.75).
mavlink = { version = "0.13", default-features = false, features = ["std", "udp", "common"] }
# Kafka — librdkafka via cmake-build. Behind the `kafka` cargo feature so
# default `cargo check` doesn't require cmake / a C++ toolchain.
rdkafka = { version = "0.36", optional = true, features = ["cmake-build"] }
# CCSDS / TLE / SGP4 — passive satellite tracking adapter. Default-on.
sgp4 = "2.0"
base64 = "0.22"
# NATS / JetStream — durable subject-based pub/sub. Behind the `nats`
# cargo feature. Pinned to ≥0.47 so the transitive `rustls-webpki` is
# ≥0.103.13 — closes RUSTSEC-2026-{0049,0098,0099,0104}.
async-nats = { version = "0.47", optional = true }
sha2 = { workspace = true }

[features]
default = ["nats"]
# Kafka adapter — pulls librdkafka via cmake-build.
kafka = ["dep:rdkafka"]
# NATS adapter — pulls async-nats client.
nats = ["dep:async-nats"]
# Enable all optional adapters.
all-adapters = ["kafka", "nats"]
