[package]
name = "orp-connector"
version.workspace = true
edition.workspace = true

[dependencies]
orp-proto = { path = "../orp-proto" }
orp-security = { path = "../orp-security" }
# TAK Protocol v1 wire codec — used by the CoT adapter to decode binary
# TAK frames (mesh + stream) when the URL scheme is `tak://` (UDP mesh) or
# `tak-tcp://` (TCP stream). Plain `udp://` and `tcp://` continue to
# accept raw CoT XML for backward compatibility.
orp-tak = { path = "../orp-tak" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
# rustls-tls + no defaults: drops native-tls + openssl-sys + the C build
# required to link them. Closes P-audit F9 / R-audit dep-trim recommendation.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
# NMEA connector: serial port access (Linux/macOS /dev/ttyUSB*)
# The serial feature falls back to raw file IO on platforms without tokio-serial.
# Uncomment to enable proper baud-rate control via tokio-serial:
# tokio-serial = { version = "5", optional = true }
# tokio-tungstenite ≥0.24 uses rustls 0.23 + rustls-webpki ≥0.103 — required
# to dodge RUSTSEC-2026-{0049,0098,0099,0104} on rustls-webpki 0.102.x. The
# pure-Rust webpki-roots feature removes the libssl/CommonCrypto runtime
# link so the binary stays single-static across macOS+Linux. Closes P-audit F9.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
csv = "1.3"
# MAVLink — drone telemetry protocol (PX4, ArduPilot, Skydio, Auterion, ModalAI).
# v0.13 keeps us on a rust-version that matches the workspace's pinned MSRV (1.75).
mavlink = { version = "0.13", default-features = false, features = ["std", "udp", "common"] }
# Kafka — librdkafka via cmake-build. Behind the `kafka` cargo feature so
# default `cargo check` doesn't require cmake / a C++ toolchain.
rdkafka = { version = "0.36", optional = true, features = ["cmake-build"] }
# CCSDS / TLE / SGP4 — passive satellite tracking adapter. Default-on.
sgp4 = "2.0"
base64 = "0.22"
# NATS / JetStream — durable subject-based pub/sub. Behind the `nats`
# cargo feature. Pinned to ≥0.47 so the transitive `rustls-webpki` is
# ≥0.103.13 — closes RUSTSEC-2026-{0049,0098,0099,0104}.
async-nats = { version = "0.47", optional = true }
sha2 = { workspace = true }

[features]
default = ["nats"]
# Kafka adapter — pulls librdkafka via cmake-build.
kafka = ["dep:rdkafka"]
# NATS adapter — pulls async-nats client.
nats = ["dep:async-nats"]
# Enable all optional adapters.
all-adapters = ["kafka", "nats"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsers"
harness = false
