[package]
name = "orp-core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orp"
path = "src/main.rs"

[dependencies]
orp-proto = { path = "../orp-proto" }
orp-storage = { path = "../orp-storage" }
orp-stream = { path = "../orp-stream" }
orp-connector = { path = "../orp-connector" }
orp-query = { path = "../orp-query" }
orp-entity = { path = "../orp-entity" }
orp-config = { path = "../orp-config" }
orp-audit = { path = "../orp-audit" }
orp-security = { path = "../orp-security" }
orp-geospatial = { path = "../orp-geospatial" }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
# CancellationToken (relay teardown on DELETE) and StreamReader / ReaderStream
# (wrap upstream byte streams under cancel + idle-timeout) for the media relay.
tokio-util = { version = "0.7", default-features = false, features = ["io", "rt"] }
# ReceiverStream — wraps the relay-task mpsc::Receiver into a Stream so
# axum::Body::from_stream can drive it under cancel + idle-timeout + byte cap.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
base64 = "0.22"
ed25519-dalek = { workspace = true }
duckdb = { version = "1.2", features = ["bundled"] }
which = "6"
thiserror = { workspace = true }
orp-testbed = { path = "../orp-testbed" }
tabled = "0.17"
colored = "3"
clap_complete = "4"
csv = "1.3"
sha2 = { workspace = true }
rand = { workspace = true }
hex = "0.4"
# Argon2id for password hashing (users.rs). OWASP 2023 floor: m=19 MiB, t=2, p=1.
# `password-hash` provides the PHC string format types (`SaltString`, `PasswordHash`).
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }
# SMTP with proper STARTTLS / implicit-TLS / AUTH LOGIN. Replaces the
# hand-rolled SMTP that sent credentials in cleartext (closes P-audit F6).
# rustls + ring + webpki-roots — no native-tls/openssl-sys, single-binary
# stays intact. Enable features explicitly so default=native-tls doesn't
# sneak in.
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls-tls", "ring", "webpki-roots"] }
# RTSP client — pulls H.264/H.265/AAC/PCMA/PCMU from any IP camera.
# `h265` feature: also depacketize HEVC. Pure-Rust, battle-tested via
# Moonfire NVR. ORP wraps it with cancel + per-call timeout because
# retina has no built-in timeouts (documented design).
retina = { version = "0.4", features = ["h265"] }
url = "2"
# WebRTC sans-IO stack — WHIP publisher + WHEP reader endpoints.
# Behind the `media-webrtc` feature: brings ICE/DTLS-SRTP machinery
# but pairs cleanly with our existing rustls (ring) provider.
str0m = { version = "0.18", optional = true }
# RTMP server (rml_rtmp) — FLV-tagged H.264/AAC ingest. Behind
# `media-rtmp`. RTMP-1.0 is frozen so the 2023 release age is fine.
rml_rtmp = { version = "0.8", optional = true }
# SRT caller + listener with AES — pure-Rust, no libsrt-sys C build.
# Behind `media-srt`. NOT_PRODUCTION_READY upstream — pinned + vendored.
srt-tokio = { version = "0.4", optional = true }
bytes = "1"

[features]
default = []
# WebRTC WHIP/WHEP server endpoints — pulls str0m.
media-webrtc = ["dep:str0m"]
# RTMP server — pulls rml_rtmp.
media-rtmp = ["dep:rml_rtmp"]
# SRT caller+listener — pulls srt-tokio.
media-srt = ["dep:srt-tokio"]
# Enable every media-server protocol.
media-all = ["media-webrtc", "media-rtmp", "media-srt"]

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
