[package]
name = "orp-entity"
version.workspace = true
edition.workspace = true

[dependencies]
orp-proto = { path = "../orp-proto" }
orp-storage = { path = "../orp-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
