[package]
name = "orp-ml"
version.workspace = true
edition.workspace = true

[dependencies]
orp-proto = { path = "../orp-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bincode = "1.3"

[dev-dependencies]
rand = { workspace = true }
tempfile = "3"
