[package]
name = "orp-security"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
# CSRF cookie HMAC + constant-time compare. Closes P-audit Wave 2 F5:
# the previous SHA256(state||secret) was length-extension forgeable, and
# the verifier used String == (variable-time, leaks-by-timing).
hmac = "0.12"
subtle = "2.5"

# JWT
jsonwebtoken = "9"

# HTTP client for OIDC discovery
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Encoding
base64 = "0.22"
hex = "0.4"

# API key hashing — Argon2id (pure Rust, RustCrypto). Replaces the
# legacy SHA-256-unsalted scheme. Matches OWASP 2023 password-hashing
# guidance (m=19 MiB, t=2, p=1) by default; see `keystore::ARGON2_PARAMS`.
argon2 = "0.5"

# Persistent API-key store (Argon2id PHC hashes are written to a
# `api_keys` table on the same embedded DuckDB instance the rest of ORP
# uses, so keys survive process restarts). `bundled` keeps the
# single-binary identity intact — no system DuckDB lib required at run
# time. Cargo dedupes against the orp-storage dep (same workspace
# version + features), so this does not link a second copy of DuckDB.
duckdb = { version = "1.2", features = ["bundled"] }

# Async traits
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serial_test = "3"
tempfile = "3"
