[package]
name = "orp-stream"
version.workspace = true
edition.workspace = true

[dependencies]
orp-proto = { path = "../orp-proto" }
orp-storage = { path = "../orp-storage" }
orp-audit = { path = "../orp-audit" }
orp-ml = { path = "../orp-ml" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rocksdb = { version = "0.22", features = ["lz4"] }
bincode = { workspace = true }
# Ed25519 signature verification on sanctions list load — closes P-audit F8.
# A disk-writeable attacker can otherwise silently delete entries to let
# sanctioned vessels through; the trust root is a pinned verifying key.
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "dlq"
harness = false

[[bench]]
name = "processor"
harness = false
